--- a/src/styles/sidebar.css
+++ b/src/styles/sidebar.css
@@ -1,36 +1,75 @@
-ul {
-    list-style: none;
-    border: 1px solid #e3e2e2;
-    max-width: 100%;
-    padding: 5%;
+.sidebar {
+  display: flex;
+  align-items: flex-start;
+  margin-bottom: 15px;
+  margin: 2%;
+}
+
+nav.sidebar.navbar {
+  border: 1px solid red !important;
+}
+
+a.nav-header.brand.navbar-brand {
+  font-weight: 800;
+  font-size: 4rem;
+  font-family: "Cookie", cursive;
+  margin-bottom: 3%;
+  color: #e3420c;
+}
+
+a.nav-link {
+  padding: 2%;
+  min-height: 2rem;
+  font-size: 1.25rem;
+  font-family: "Montserrat", sans-serif;
+  text-align: right;
+}
+
+a.nav-link:hover {
+  color: #e3420c !important;
+}
+
+.fab.fa-instagram.fa-2x {
+  padding-top: 10%;
+}
+
+button.navbar-toggler {
+  margin-top: 30px;
+  padding: 3%;
+}
+
+@media (min-width: 768px) {
+  div.collapse.navbar-collapse {
+    margin-top: 5%;
   }
-  
-  a.nav-header.brand.navbar-brand {
-    font-weight: 800;
-    font-size: 4rem;
-    font-family: "Cookie", cursive;
-    margin-bottom: 3%;
-    color: #e3420c;
-  }
-  
-  a.nav-link {
-    padding: 1%;
-    min-height: 2rem;
-    font-size: 1.25rem;
-    font-family: "Montserrat", sans-serif;
-    text-align: right;
-  }
-  
-  a.nav-link:hover {
-    color: #e3420c !important;
-  }
-  
   .fab.fa-instagram.fa-2x {
-    padding-top: 10%;
+    margin-top: -10px;
   }
-  
-@media (min-width: 992px) {
-    .navbar-nav {
-        background: paleturquoise;
-    }
-}   
+  /* .sidebar {
+    display: flex;
+    min-width: 30%;
+    border-radius: 25px;
+    display: flex;
+    border-radius: 15px;
+    align-items: flex-start;
+  } */
+  .nav-header {
+    font-size: 1.35rem;
+    margin-bottom: 1rem;
+  }
+  a.nav-link {
+    font-size: 1.5rem;
+    /* justify-content: flex-start; */
+    /* align-items: center; */
+    /* margin-top: 50%; */
+  }
+  .collapse {
+    display: flex;
+  }
+  .navbar-nav {
+    margin: 0;
+  }
+  /* .navbar-expand-md .navbar-nav {
+    flex-direction: column;
+  } */
+}
