--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,10 +1,17 @@
-body {
-    padding: 3%;
+.main {
+  border: 2px solid red;
+  width: 100%;
 }
-.col-sm-6 {
-    padding-bottom: 2%;
-}
+
 img {
-    width: 100%;
-    height: auto;
+  width: 90%;
+  padding: 1%;
+  display: block;
+  margin: auto;
+}
+
+@media (min-width: 768px) {
+  img {
+    margin: auto;
+  }
 }
