--- a/src/styles/sidebar.css
+++ b/src/styles/sidebar.css
@@ -1,6 +1,7 @@
 .sidebar {
   display: flex;
   align-items: flex-start;
+  margin-bottom: 15px;
   margin: 2%;
 }
 
@@ -27,7 +28,7 @@ a.nav-link {
 
 a.nav-link:hover {
   color: #e3420c !important;
-  text-decoration: underline;
+  font-weight: bold;
 }
 
 .fab.fa-instagram.fa-2x {
@@ -41,34 +42,110 @@ button.navbar-toggler {
 
 @media (min-width: 768px) {
   div.collapse.navbar-collapse {
-    margin-top: 15%;
-    margin-right: 5%;
+    margin-top: 5%;
   }
-  li.nav-item{
-    white-space: nowrap;
-    margin-right: 1%;
+  .fab.fa-instagram.fa-2x {
+    margin-top: -20px;
   }
+  .nav-header {
+    font-size: 1.35rem;
+    margin-bottom: 1rem;
+  }
+  a.nav-link {
+    font-size: 1.25rem;
+  }
+  .collapse {
+    display: flex;
+  }
+  /* .navbar-nav {
+    margin: 0;
+  } */
 }
 
-@media (min-width: 1350px) {
-  .navbar-expand-md .navbar-nav {
+@media (min-width: 1200px) {
+  .navbar-expand-md.navbar-nav {
     flex-direction: column;
+  }
+  .sidebar {
+    min-width: 105%;
+    border-radius: 25px;
+    display: flex;
+    border-radius: 15px;
+    align-items: flex-start;
+    min-height: 100vh;
   }
   nav.sidebar.navbar {
     height: 95vh;
-    padding-right: 15rem;
+    padding-right: 5rem;
   }
   .sidebar {
-    max-width: 20%;
+    max-width: 15%;
     display: flex;
   }
-
+  .nav-header {
+    padding: 1%;
+    font-size: 1.35rem;
+    margin-left: 5%;
+  }
   a.nav-link {
     display: inline-block;
     position: relative;
     top: 5rem;
-    width: 140%;
+    /* width: 140%; */
     font-size: 1.25rem;
     padding: 7%;
   }
+
+  a.nav-link {
+    display: block;
+    position: relative;
+    width: 150%;
+    top: 3rem;
+    right: 2rem;
+    font-size: 1.5rem;
+    justify-content: flex-start;
+    margin: 20px 10px 10px 10px;
+  }
+
+  /* .collapse {
+    display: flex;
+  }
+  .navbar-nav {
+    margin: 0;
+  } */
+  .navbar-expand-md .navbar-nav {
+    flex-direction: column;
+  }
 }
+
+/* @media (min-width: 992px) {
+  .sidebar {
+    min-width: 105%;
+    border-radius: 25px;
+    display: flex;
+    border-radius: 15px;
+    align-items: flex-start;
+    min-height: 100vh;
+  }
+
+  a.nav-link {
+    display: block;
+    position: relative;
+    width: 150%;
+    top: 3rem;
+    right: 13rem;
+    font-size: 1.5rem;
+    justify-content: flex-start;
+    margin: 20px 10px 10px 10px;
+  }
+
+  .collapse {
+    display: flex;
+  }
+  .navbar-nav {
+    margin: 0;
+  }
+  .navbar-expand-md .navbar-nav {
+    flex-direction: column;
+  }
+} */
