--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,4 +1,4 @@
-.main {
+/* .main {
   width: 100%;
   display: flex;
   flex-direction: row;
@@ -9,4 +9,4 @@
 img {
   padding-bottom: 1%;
   margin: auto;
-}
+} */
