--- a/src/styles/sidebar.css
+++ b/src/styles/sidebar.css
@@ -1,21 +1,9 @@
-.sidebar {
-  display: flex;
-  align-items: flex-start;
-  margin-bottom: 15px;
-  margin: 2%;
-}
-
-nav.sidebar.navbar {
-  background-color: #f9f8f8 !important;
-}
-
-a.nav-header.brand.navbar-brand {
+a.navbar-brand {
   font-weight: 800;
   font-size: 4rem;
   font-family: "Cookie", cursive;
-  margin-bottom: 3%;
   margin-left: 5%;
-  color: #e3420c;
+  color: #e3420c !important;
 }
 
 a.nav-link {
@@ -28,11 +16,69 @@ a.nav-link {
 
 a.nav-link:hover {
   color: #e3420c !important;
-  font-weight: bold;
 }
 
 .fab.fa-instagram.fa-2x {
   padding-top: 10%;
+}
+
+@media (min-width: 996px) {
+  .sidebar {
+    min-width: 100%;
+    display: flex;
+    background-color: red !important;
+  }
+  .navbar-expand-md.navbar-nav {
+    flex-direction: column;
+  }
+  a.nav-link {
+    background-color: blue;
+    flex-direction: column;
+  }
+  /* nav.sidebar.navbar {
+    height: 100vh;
+    padding-right: 5rem;
+  } */
+  /* .sidebar {
+    max-width: 15%;
+    display: flex;
+  } */
+  /* .nav-header {
+    padding: 1%;
+    font-size: 1.35rem;
+    margin-left: 5%;
+  } */
+  /* a.nav-link {
+    display: inline-block;
+    position: relative;
+    top: 5rem;
+    font-size: 1.25rem;
+    padding: 7%;
+  } */
+
+  /* a.nav-link {
+    display: block;
+    position: relative;
+    width: 150%;
+    top: 3rem;
+    right: 2rem;
+    font-size: 1.5rem;
+    justify-content: flex-start;
+    margin: 20px 10px 10px 10px;
+  } */
+  /* .navbar-expand-md .navbar-nav {
+    flex-direction: column;
+  } */
+}
+/* .sidebar {
+  display: flex;
+  align-items: flex-start;
+  margin-bottom: 15px;
+  margin: 2%;
+}
+
+nav.sidebar.navbar {
+  background-color: #f9f8f8 !important;
 }
 
 button.navbar-toggler {
@@ -109,4 +155,4 @@ button.navbar-toggler {
 }
 
 @media (min-width: 1260px) {
-}
+} */
