sidebar wip, overflows at lg/md and md links aligned wrong

--- a/src/styles/sidebar.css
+++ b/src/styles/sidebar.css
@@ -21,130 +21,33 @@ a.nav-link:hover {
 .fab.fa-instagram.fa-2x {
   padding-top: 10%;
 }
-
-@media (min-width: 996px) {
-  .sidebar {
-    min-width: 100%;
-    display: flex;
-    background-color: red !important;
-  }
-  .navbar-expand-md.navbar-nav {
-    flex-direction: column;
-  }
-  a.nav-link {
-    background-color: blue;
-    flex-direction: column;
-  }
-  /* nav.sidebar.navbar {
-    height: 100vh;
-    padding-right: 5rem;
-  } */
-  /* .sidebar {
-    max-width: 15%;
-    display: flex;
-  } */
-  /* .nav-header {
-    padding: 1%;
-    font-size: 1.35rem;
-    margin-left: 5%;
-  } */
-  /* a.nav-link {
-    display: inline-block;
-    position: relative;
-    top: 5rem;
-    font-size: 1.25rem;
-    padding: 7%;
-  } */
-
-  /* a.nav-link {
-    display: block;
-    position: relative;
-    width: 150%;
-    top: 3rem;
-    right: 2rem;
-    font-size: 1.5rem;
-    justify-content: flex-start;
-    margin: 20px 10px 10px 10px;
-  } */
-  /* .navbar-expand-md .navbar-nav {
-    flex-direction: column;
-  } */
-}
-/* .sidebar {
+.sidebar {
   display: flex;
   align-items: flex-start;
   margin-bottom: 15px;
   margin: 2%;
 }
-
-nav.sidebar.navbar {
-  background-color: #f9f8f8 !important;
-}
-
-button.navbar-toggler {
-  margin-top: 30px;
-  padding: 3%;
-}
-
-@media (min-width: 768px) {
-  div.collapse.navbar-collapse {
-    margin-top: 5%;
-  }
-  .fab.fa-instagram.fa-2x {
-    margin-top: -20px;
-  }
-
-  .nav-header {
-    font-size: 1.35rem;
-    margin-bottom: 1rem;
-  }
-  a.nav-link {
-    font-size: 1.25rem;
-  }
-  .collapse {
-    display: flex;
-  }
-  .navbar-nav {
-    margin: 0;
-  }
-}
-
-@media (min-width: 996px) {
-  .navbar-expand-md.navbar-nav {
-    flex-direction: row;
-  }
+@media (min-width: 992px) {
   .sidebar {
-    min-width: 100%;
+    max-width: 90% !important;
     display: flex;
-    align-items: flex-start;
+  
   }
   nav.sidebar.navbar {
-    height: 100vh;
+    height: 90vh;
     padding-right: 5rem;
+    flex-direction: column;
   }
-  .sidebar {
-    max-width: 15%;
-    display: flex;
-  }
-  .nav-header {
-    padding: 1%;
-    font-size: 1.35rem;
-    margin-left: 5%;
+  a.navbar-brand {
+    flex-direction: column;
+    margin-left: 10%;
   }
   a.nav-link {
     display: inline-block;
     position: relative;
-    top: 5rem;
-    font-size: 1.25rem;
-    padding: 7%;
-  }
-
-  a.nav-link {
-    display: block;
-    position: relative;
     width: 150%;
-    top: 3rem;
-    right: 2rem;
+    top: -10rem;
+    right: -3rem;
     font-size: 1.5rem;
     justify-content: flex-start;
     margin: 20px 10px 10px 10px;
@@ -152,7 +55,5 @@ button.navbar-toggler {
   .navbar-expand-md .navbar-nav {
     flex-direction: column;
   }
-}
 
-@media (min-width: 1260px) {
-} */
+}
