--- a/src/styles/sidebar.css
+++ b/src/styles/sidebar.css
@@ -1,3 +1,6 @@
+.navbar {
+  min-width: 100%;
+}
 a.navbar-brand {
   font-weight: 800;
   font-size: 4rem;
@@ -29,24 +32,26 @@ button.navbar-toggler {
     display: flex;
   }
   nav.sidebar.navbar {
-    height: 90vh;
+    height: 95vh;
     padding-right: 5rem;
     flex-direction: column;
   }
   a.navbar-brand {
     flex-direction: column;
   }
+  a.navbar-brand {
+    margin-left: 0;
+  }
   a.nav-link {
-    display: inline-block;
-    position: relative;
-    width: 125%;
-    top: -15rem;
-    right: -1rem;
+    /* display: inline-block; */
+    /* position: relative; */
+    /* width: 125%; */
+    /* top: -15rem; */
+    /* right: -1rem; */
     font-size: 1.5rem;
     margin: 20px 10px 10px 10px;
   }
   .navbar-expand-md .navbar-nav {
     flex-direction: column;
   }
-
 }
